--- a/model_yamls/ebird_sdae_l2_nocv.yaml
+++ b/model_yamls/ebird_sdae_l2_nocv.yaml
@@ -1,15 +1,7 @@
-!obj:pylearn2.cross_validation.TrainCV {
-    dataset_iterator: &train !obj:pylearn2.cross_validation.dataset_iterators.TransformerDatasetCV {
-        dataset_iterator:  !obj:pylearn2.cross_validation.dataset_iterators.DatasetKFold {
-            dataset: !obj:DUconfig.get_dataset {},
-            n_folds: %(n_folds)i
-        },
-        transformers: !obj:pylearn2.cross_validation.blocks.StackedBlocksCV {
-            layers: [
-                !pkl: "%(save_path)s/%(layer_fn)s_l1.pkl",
-                !pkl: "%(save_path)s/%(layer_fn)s_l2.pkl",
-            ],
-        },
+!obj:pylearn2.train.Train {
+    dataset: &train !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
+        raw: !obj:DUconfig.get_dataset {},
+        transformer: !pkl: "%(save_path)s/%(layer_fn)s_l1.pkl",
     },
     model: !obj:pylearn2.models.autoencoder.DenoisingAutoencoder {
         nvis : %(nvis)i,
@@ -24,6 +16,8 @@
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
         learning_rate : 1e-3,
         batch_size : %(batch_size)i,
+        monitoring_batch_size : %(monitoring_batch_size)i,
+        monitoring_dataset : *train,
         cost : !obj:pylearn2.costs.cost.SumOfCosts {
             costs: [!obj:pylearn2.costs.autoencoder.MeanSquaredReconstructionError {}, !obj:pylearn2.costs.autoencoder.SparseActivation {coeff: %(sparse_coef)f,p: %(sparse_p)f}]
         },
@@ -31,6 +25,6 @@
             max_epochs: %(max_epochs)i,
         },
     },
-    save_path: "%(save_path)s/%(layer_fn)s_l3.pkl",
+    save_path: "%(save_path)s/%(layer_fn)s_l2.pkl",
     save_freq: 1
 }
