--- a/model_yamls/ebird_sdae_l3_nocv.yaml
+++ b/model_yamls/ebird_sdae_l3_nocv.yaml
@@ -2,9 +2,9 @@
     dataset: &train !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
         raw: !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
             raw: !obj:DUconfig.get_dataset {},
-            transformer: !pkl: "%(save_path)s/ebird_dae_l1.pkl",
+            transformer: !pkl: "%(save_path)s/%(layer_fn)s_l1.pkl",
         },
-        transformer: !pkl: "%(save_path)s/ebird_dae_l2.pkl"
+        transformer: !pkl: "%(save_path)s/%(layer_fn)s_l2.pkl"
     },
     model: !obj:pylearn2.models.autoencoder.DenoisingAutoencoder {
         nvis : %(nvis)i,
@@ -28,6 +28,6 @@
             max_epochs: %(max_epochs)i,
         },
     },
-    save_path: "%(save_path)s/ebird_dae_l3.pkl",
+    save_path: "%(save_path)s/%(layer_fn)s_l3.pkl",
     save_freq: 1
 }
