--- a/model_yamls/ebird_sdae_l4_nocv.yaml
+++ b/model_yamls/ebird_sdae_l4_nocv.yaml
@@ -1,7 +1,13 @@
 !obj:pylearn2.train.Train {
     dataset: &train !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
-        raw: !obj:DUconfig.get_dataset {},
-        transformer: !pkl: "%(save_path)s/ebird_dae_l1.pkl"
+        raw: !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
+            raw: !obj:pylearn2.datasets.transformer_dataset.TransformerDataset {
+                raw: !obj:DUconfig.get_dataset {},
+                transformer: !pkl: "%(save_path)s/%(layer_fn)s_l1.pkl",
+            },
+            transformer: !pkl: "%(save_path)s/%(layer_fn)s_l2.pkl"
+        },
+        transformer: !pkl: "%(save_path)s/%(layer_fn)s_l3.pkl"
     },
     model: !obj:pylearn2.models.autoencoder.DenoisingAutoencoder {
         nvis : %(nvis)i,
@@ -25,6 +31,6 @@
             max_epochs: %(max_epochs)i,
         },
     },
-    save_path: "%(save_path)s/ebird_dae_l2.pkl",
+    save_path: "%(save_path)s/%(layer_fn)s_l4.pkl",
     save_freq: 1
 }
