--- a/model_yamls/ebird_sdae_l2.yaml
+++ b/model_yamls/ebird_sdae_l2.yaml
@@ -18,7 +18,7 @@
             corruption_level: %(corrupt)f,
         },
         act_enc: "tanh",
-        act_dec: null,    # Linear activation on the decoder side.
+        act_dec: "tanh",    # Linear activation on the decoder side.
     },
     algorithm: !obj:pylearn2.training_algorithms.sgd.SGD {
         learning_rate : 1e-3,
