--- a/model_yamls/ebird_sdae_l1_nocv.yaml
+++ b/model_yamls/ebird_sdae_l1_nocv.yaml
@@ -1,7 +1,7 @@
 !obj:pylearn2.train.Train {
     dataset: &train !obj:DUconfig.get_dataset {},
     model: !obj:pylearn2.models.autoencoder.DenoisingAutoencoder {
-        nvis : 90,
+        nvis : %(nvis)i,
         nhid : %(nhid)i,
         irange : 0.05,
         corruptor: !obj:pylearn2.corruption.BinomialCorruptor {
