--- a/model_yamls/ebird_sdae_l2.yaml
+++ b/model_yamls/ebird_sdae_l2.yaml
@@ -2,7 +2,8 @@
     dataset_iterator: &train !obj:pylearn2.cross_validation.dataset_iterators.TransformerDatasetCV {
         dataset_iterator:  !obj:pylearn2.cross_validation.dataset_iterators.DatasetKFold {
             dataset: !obj:DUconfig.get_dataset {},
-            n_folds: %(n_folds)i
+            n_folds: %(n_folds)i,
+            shuffle: True
         },
         transformers: !obj:pylearn2.cross_validation.blocks.StackedBlocksCV {
             layers: [
