Updated yaml files for high momentum tests.

--- a/model_yamls/binarisedmnist_vae.yaml
+++ b/model_yamls/binarisedmnist_vae.yaml
@@ -71,8 +71,8 @@
     extensions: [
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             final_momentum: %(mom_fin)f,
-            start: 1,
-            saturate: %(max_epochs)i
+            start: 5,
+            saturate: 15
         },
     ],
 }
