--- a/model_yamls/recipes_vae.yaml
+++ b/model_yamls/recipes_vae.yaml
@@ -65,7 +65,7 @@
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             final_momentum: %(mom_fin)f,
             start: 1,
-            saturate: %(max_epochs)i
+            saturate: 15,
         },
     ],
 }
