More yaml tweaks

--- a/model_yamls/soup_vae.yaml
+++ b/model_yamls/soup_vae.yaml
@@ -61,8 +61,8 @@
         },
         monitoring_batch_size : %(monitoring_batch_size)i,
         monitoring_dataset : *train,
-        cost: !obj:pylearn2.costs.vae.ImportanceSamplingCriterion {
-            num_samples: 5,
+        cost: !obj:pylearn2.costs.vae.VAECriterion {
+            num_samples: 1,
         },
         termination_criterion: !obj:pylearn2.termination_criteria.EpochCounter {
             max_epochs: %(max_epochs)i,
