--- a/model_yamls/soup_vae_nocv.yaml
+++ b/model_yamls/soup_vae_nocv.yaml
@@ -60,8 +60,8 @@
           train: *train,
           test: !obj:DUconfig.get_test_dataset {},
         },
-        cost: !obj:pylearn2.costs.vae.ImportanceSamplingCriterion {
-            num_samples: 5,
+        cost: !obj:pylearn2.costs.vae.VAECriterion {
+            num_samples: 1,
         },
         termination_criterion: !obj:pylearn2.termination_criteria.EpochCounter {
             max_epochs: %(max_epochs)i,
