--- a/model_yamls/mmf_vae.yaml
+++ b/model_yamls/mmf_vae.yaml
@@ -1,5 +1,9 @@
-!obj:pylearn2.train.Train {
-    dataset: &train !obj:DUconfig.get_train_dataset {},
+!obj:pylearn2.cross_validation.TrainCV {
+    dataset_iterator:  !obj:pylearn2.cross_validation.dataset_iterators.DatasetKFold {
+        dataset: &train !obj:DUconfig.get_dataset {},
+        n_folds: %(n_folds)i,
+        shuffle: True
+    },
     model: !obj:pylearn2.models.vae.VAE {
         nvis : %(nvis)i,
         nhid : %(nhid)i,
@@ -10,12 +14,12 @@
                 layers: [
                     !obj:pylearn2.models.mlp.RectifiedLinear {
                         layer_name: 'h_2',
-                        dim: %(nhid_mlp2)i,
+                        dim: %(nhid_mlp1)i,
                         irange: 0.1,
                     },
                     !obj:pylearn2.models.mlp.RectifiedLinear {
                         layer_name: 'h_1',
-                        dim: %(nhid_mlp1)i,
+                        dim: %(nhid_mlp2)i,
                         irange: 0.1,
                     },
                 ],
@@ -46,12 +50,9 @@
             init_momentum: %(mom_init)f,
         },
         monitoring_batch_size : %(monitoring_batch_size)i,
-        monitoring_dataset : {
-          train: *train,
-          test: !obj:DUconfig.get_test_dataset {},
-        },
+        monitoring_dataset : *train,
         cost: !obj:pylearn2.costs.vae.VAECriterion {
-            num_samples: 10,
+            num_samples: 1,
         },
         termination_criterion: !obj:pylearn2.termination_criteria.EpochCounter {
             max_epochs: %(max_epochs)i,
@@ -69,7 +70,7 @@
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             final_momentum: %(mom_fin)f,
             start: 5,
-            saturate: 50,
+            saturate: 20,
         },
     ],
 }
