--- a/model_yamls/ebird_vae.yaml
+++ b/model_yamls/ebird_vae.yaml
@@ -8,19 +8,19 @@
         nvis : %(nvis)i,
         nhid : %(nhid)i,
         prior: !obj:pylearn2.models.vae.prior.DiagonalGaussianPrior {},
-        conditional: !obj:pylearn2.models.vae.conditional.BernoulliVector {
+        conditional: !obj:pylearn2.models.vae.conditional.DiagonalGaussian {
             name: 'conditional',
             mlp: !obj:pylearn2.models.mlp.MLP {
                 layers: [
                     !obj:pylearn2.models.mlp.RectifiedLinear {
-                        layer_name: 'h_1',
-                        dim: %(nhid_mlp1)i,
-                        irange: 0.001,
+                        layer_name: 'ch_1',
+                        dim: %(nhid_mlp)i,
+                        irange: 0.1,
                     },
                     !obj:pylearn2.models.mlp.RectifiedLinear {
-                        layer_name: 'h_2',
-                        dim: %(nhid_mlp2)i,
-                        irange: 0.001,
+                        layer_name: 'ch_2',
+                        dim: %(nhid_mlp)i,
+                        irange: 0.1,
                     },
                 ],
             },
@@ -30,9 +30,14 @@
             mlp: !obj:pylearn2.models.mlp.MLP {
                 layers: [
                     !obj:pylearn2.models.mlp.RectifiedLinear {
-                        layer_name: 'h_1',
-                        dim: %(nhid_mlp1)i,
-                        irange: 0.001,
+                        layer_name: 'ph_1',
+                        dim: %(nhid_mlp)i,
+                        irange: 0.1,
+                    },
+                    !obj:pylearn2.models.mlp.RectifiedLinear {
+                        layer_name: 'ph_2',
+                        dim: %(nhid_mlp)i,
+                        irange: 0.1,
                     },
                 ],
             },
@@ -64,8 +69,8 @@
     extensions: [
         !obj:pylearn2.training_algorithms.learning_rule.MomentumAdjustor {
             final_momentum: %(mom_fin)f,
-            start: 1,
-            saturate: %(max_epochs)i
+            start: 5,
+            saturate: 10
         },
     ],
 }
