--- a/model_yamls/ebird_vae_nocv.yaml
+++ b/model_yamls/ebird_vae_nocv.yaml
@@ -4,19 +4,19 @@
         nvis : %(nvis)i,
         nhid : %(nhid)i,
         prior: !obj:pylearn2.models.vae.prior.DiagonalGaussianPrior {},
-        conditional: !obj:pylearn2.models.vae.conditional.BernoulliVector {
+        conditional: !obj:pylearn2.models.vae.conditional.DiagonalGaussian {
             name: 'conditional',
             mlp: !obj:pylearn2.models.mlp.MLP {
                 layers: [
                     !obj:pylearn2.models.mlp.RectifiedLinear {
-                        layer_name: 'h_1',
+                        layer_name: 'ch_1',
                         dim: %(nhid_mlp1)i,
-                        irange: 0.001,
+                        irange: 0.1,
                     },
                     !obj:pylearn2.models.mlp.RectifiedLinear {
-                        layer_name: 'h_2',
+                        layer_name: 'ch_2',
                         dim: %(nhid_mlp2)i,
-                        irange: 0.001,
+                        irange: 0.1,
                     },
                 ],
             },
@@ -26,9 +26,14 @@
             mlp: !obj:pylearn2.models.mlp.MLP {
                 layers: [
                     !obj:pylearn2.models.mlp.RectifiedLinear {
-                        layer_name: 'h_1',
+                        layer_name: 'ph_1',
+                        dim: %(nhid_mlp2)i,
+                        irange: 0.1,
+                    },
+                    !obj:pylearn2.models.mlp.RectifiedLinear {
+                        layer_name: 'ph_2',
                         dim: %(nhid_mlp1)i,
-                        irange: 0.001,
+                        irange: 0.1,
                     },
                 ],
             },
